added alt texts

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
       <div class="card-grid">
         <div class="card column-2 dark-background" id="card1">
           <div class="profile-info">
-            <img src="./images/image-daniel.jpg" class="purple-border" />
+            <img
+              src="./images/image-daniel.jpg"
+              class="purple-border"
+              alt="Daniel profile photo"
+            />
             <div>
               <span>Daniel Clifford</span>
               <span class="profile-subtitle">Verified Graduate</span>
@@ -50,7 +54,10 @@
         </div>
         <div class="card neutral-background" id="card2">
           <div class="profile-info">
-            <img src="./images/image-jonathan.jpg" />
+            <img
+              src="./images/image-jonathan.jpg"
+              alt="Johnathan profile photo"
+            />
             <div>
               <span>Jonathan Walters</span>
               <span class="profile-subtitle">Verified Graduate</span>
@@ -67,7 +74,10 @@
         </div>
         <div class="card light-background" id="card3">
           <div class="profile-info">
-            <img src="./images/image-jeanette.jpg" />
+            <img
+              src="./images/image-jeanette.jpg"
+              alt="Jeanette profile photo"
+            />
             <div>
               <span>Jeanette Harmon</span>
               <span class="profile-subtitle">Verified Graduate</span>
@@ -83,7 +93,11 @@
         </div>
         <div class="card column-2 neutral-background" id="card4">
           <div class="profile-info">
-            <img src="./images/image-patrick.jpg" class="purple-border" />
+            <img
+              src="./images/image-patrick.jpg"
+              class="purple-border"
+              alt="Patrick profile photo"
+            />
             <div>
               <span>Patrick Abrams</span>
               <span class="profile-subtitle">Verified Graduate</span>
@@ -105,7 +119,7 @@
         </div>
         <div class="card row-2 light-background" id="card5">
           <div class="profile-info">
-            <img src="./images/image-kira.jpg" />
+            <img src="./images/image-kira.jpg" alt="kira profile photo" />
             <div>
               <span>Kira Whittle</span>
               <span class="profile-subtitle">Verified Graduate</span>
