fixed more colors and padding

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             enjoy, and make a good living while doing something I love. ”
           </p>
         </div>
-        <div class="card column-2 neutral-background" id="card4">
+        <div class="card column-2" id="card4">
           <div class="profile-info">
             <img
               src="./images/image-patrick.jpg"
